# kiru

./: .gitignore  Cargo.toml  README.md  justfile  kiru.pyi  pyproject.toml
.cargo/: config.toml
.github/workflows/: release.yaml  test.yaml
kiru-core/: Cargo.toml  README.md
kiru-core/benches/: file_chunking.rs  par_chunking.rs  string_chunking.rs
kiru-core/src/: bytes_chunker.rs  characters_chunker.rs  chun.rs  chunker.rs  lib.rs  stream.rs
kiru-core/src/chunker/: bytes_chunker.rs  characters_chunker.rs  mod.rs
kiru-core/tests/: bytes_chunker.rs  characters_chunker.rs
kiru-py/: Cargo.toml  README.md  benchmark_results.csv  pyproject.toml
kiru-py/python/: bench.py  bench_plot.py  t.py  test.py  ttt.py
kiru-py/src/: lib.rs
python/: test.py
src/: lib.rs
src/chunker/: characters_chunker.rs  mod.rs  stream.rs
test-data/: realistic-1.0mb.txt
utils/: bump_version.py  check_version_newer.py  check_version_sync.py  get_version.py  tag_version.py
