# kiru/Cargo.toml (workspace root)
[workspace]
members = [
    "kiru-core", # Core Rust library
    "kiru-py",   # Python bindings
]
resolver = "2"

# Shared dependencies (optional but recommended)
[workspace.dependencies]
thiserror = "2.0.17"
pyo3 = "0.27.0"
tempfile = "3.23.0"
proptest = "1.8.0"
criterion = "0.7.0"
