# kiru/Cargo.toml
[package]
name = "kiru"
version = "0.1.3"
edition = "2021"
description = "Fast text chunking for Rust"
license = "MIT"
repository = "https://github.com/bitswired/kiru"
keywords = ["text", "chunking", "nlp", "rag"]
categories = ["text-processing"]

[lib]
name = "kiru"
crate-type = ["rlib"] # ← Only Rust library, NOT cdylib!

[dependencies]
reqwest = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "file_chunking"
harness = false

[[bench]]
name = "string_chunking"
harness = false

[[bench]]
name = "par_chunking"
harness = false
