# kiru/Cargo.toml
[package]
name = "kiru"
version = "0.1.10"
edition = "2021"
description = "Fast text chunking for Rust"
license = "MIT"
repository = "https://github.com/bitswired/kiru"
readme = "../README.md"
keywords = ["text", "chunking", "nlp", "rag"]
categories = ["text-processing"]

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[lib]
name = "kiru"
crate-type = ["rlib"] # ← Only Rust library, NOT cdylib!

[dependencies]
reqwest = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = "0.5.15"

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "file_chunking"
harness = false

[[bench]]
name = "string_chunking"
harness = false

[[bench]]
name = "par_chunking"
harness = false
