# kiru-py/Cargo.toml
[package]
name = "kiru-py"
version = "0.1.1"
edition = "2021"
description = "Python bindings for kiru text chunking library"
license = "MIT"

[lib]
name = "kiru"           # ← Python will import as "kiru"
crate-type = ["cdylib"] # ← Only Python module

[dependencies]
pyo3 = { workspace = true }

[dependencies.kiru]
path = "../kiru-core"
version = "0.1.1"
[build-dependencies]
# None needed for simple bindings
