# kiru-py/Cargo.toml
[package]
name = "kiru-py"
version = "0.1.5"
edition = "2021"
description = "Python bindings for kiru text chunking library"
repository = "https://github.com/bitswired/kiru"
license = "MIT"

[lib]
name = "kiru"           # ← Python will import as "kiru"
crate-type = ["cdylib"] # ← Only Python module

[dependencies]
pyo3 = { workspace = true }

[dependencies.kiru]
path = "../kiru-core"
version = "0.1.5"
[build-dependencies]
# None needed for simple bindings
