[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "kiru"
readme = "../README.md"
keywords = ["text", "chunking", "nlp", "rag"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/bitswired/kiru"
Repository = "https://github.com/bitswired/kiru"
Documentation = "https://github.com/bitswired/kiru"
"Bug Tracker" = "https://github.com/bitswired/kiru/issues"
Changelog = "https://github.com/bitswired/kiru/releases"


[tool.maturin]
features = ["pyo3/extension-module"]
#jsdist-include = ["LICENSE", "README.md"]
sdist-include = ["../README.md"]


[dependency-groups]
dev = [
    "hypothesis>=6.142.1",
    "kaleido>=1.1.0",
    "langchain>=0.3.27",
    "pandas-stubs>=2.3.2.250926",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pytest>=8.4.2",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "rust/Cargo.toml" },
    { file = "**/*.rs" },
]
